Fix: Align button bar with chart y-axis in detailed view.

--- a/src/app/shared/chart-components/timeline/timeline.component.scss
+++ b/src/app/shared/chart-components/timeline/timeline.component.scss
@@ -7,6 +7,10 @@
         background-color: $white;
         border-radius: 6px;
 
+        .button-bar {
+            padding-left: 45px;
+        }
+
         .chart-button {
             background-color: rgba(219, 227, 241, 0.75);
             background-image: none;
@@ -64,27 +68,27 @@
                 stroke-width: 4px;
             }
 
-            .button-bar {
-                margin-left: 20px;
-
-                .kendo-button-group {
-                    margin-left: 20px;
-                }
-
-                button {
-                    width: 38px;
-                    height: 16px;
-                    font-family: PostGrotesk;
-                    font-size: 12px;
-                    font-weight: 500;
-                    font-style: normal;
-                    font-stretch: normal;
-                    line-height: normal;
-                    letter-spacing: 0.5px;
-                    color: $light-navy;
-                    padding: 5px;
-                }
-            }
+            //.button-bar {
+            //    margin-left: 20px;
+            //
+            //    .kendo-button-group {
+            //        margin-left: 20px;
+            //    }
+            //
+            //    button {
+            //        width: 38px;
+            //        height: 16px;
+            //        font-family: PostGrotesk;
+            //        font-size: 12px;
+            //        font-weight: 500;
+            //        font-style: normal;
+            //        font-stretch: normal;
+            //        line-height: normal;
+            //        letter-spacing: 0.5px;
+            //        color: $light-navy;
+            //        padding: 5px;
+            //    }
+            //}
 
             g.yAxis {
                 height: 1px;
